feat(layout): add layout container

--- a/backend/src/api/templates/carsTable.template.hbs
+++ b/backend/src/api/templates/carsTable.template.hbs
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
     {{#each cars}}
-      <tr>
+      <tr style="cursor: pointer;">
         <td>{{id}}</td>
         <td>{{make}}</td>
         <td>{{model}}</td>
