--- a/backend/src/api/templates/layout.template.hbs
+++ b/backend/src/api/templates/layout.template.hbs
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title }}</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <link rel="stylesheet" href="http://localhost:3000/public/styles.css" />
+    <script src="http://localhost:3000/public/car-scripts.js"></script>
+    <script src="http://localhost:3000/public/customer-scripts.js"></script>
+    <title>{{title}}</title>
   </head>
   <body>
-    <div id="main">
-      <h1>{{ title }}</h1>
-      <div id="content">
-        {{ content }}
-      </div>
+    <main class="container-fluid">
+      <h1>{{title}}</h1>
+      <content />
+    </main>
   </body>
 </html>
