feat(cars): get available cars between 2 dates

--- a/backend/src/api/templates/layout.template.hbs
+++ b/backend/src/api/templates/layout.template.hbs
@@ -28,6 +28,7 @@
         <h2>Welcome to the Car Rental System</h2>
         <p>Manage your car rentals efficiently.</p>
       </section>
+      <section><h3>{{title}}</h3></section>
       <content />
     </main>
   </body>
