fix(layout): fix paths

--- a/backend/src/api/templates/layout.template.hbs
+++ b/backend/src/api/templates/layout.template.hbs
@@ -6,9 +6,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
     />
-    <link rel="stylesheet" href="http://localhost:3000/public/styles.css" />
-    <script src="http://localhost:3000/public/car-scripts.js"></script>
-    <script src="http://localhost:3000/public/customer-scripts.js"></script>
+    <link rel="stylesheet" href="/public/styles.css" />
+    <script src="/public/car-scripts.js"></script>
+    <script src="/public/customer-scripts.js"></script>
     <title>Car Rental</title>
   </head>
   <body>
